Left aligned main header, fixed nav padding

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,6 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 	flex-flow: row wrap;
 	text-align: center;
 }
@@ -66,6 +65,7 @@ header h1 span {
 }
 
 header nav {
+	padding: 20px 0;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -83,7 +83,7 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 14px;
-	padding: 0 10px;
+	padding: 10px 0;
 	justify-content: center;
 	align-items: space-between;
 	list-style: none;
@@ -118,7 +118,7 @@ header nav ul li a{
 	align-items: center;
 }
 .main-title h2 {
-	text-align: center;
+	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
 }
